syntax = "proto3";
package products;
option go_package = "internal.pkg.products;products";
import "models.proto";

service Products {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc GetProducts (ProductsRequest) returns (ProductsResponse);
  rpc GetCategory (CategoryRequest) returns (CategoryResponse);
}

message ProductRequest {
  string id = 1; 
}

message ProductResponse {
  Product product = 1; 
}

message ProductsRequest {
  int64 paging = 1;
  int64 count = 2; 
}

message ProductsResponse {
  repeated Product products = 1; 
}

message CategoryRequest {
  int32 id = 1;
  int64 paging = 2;
  int64 count = 3; 
}

message CategoryResponse {
  repeated Product products = 1; 
}